<resources>
    <string name="app_name">DIG_T1</string>
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="emailHint">Digite o e-mail</string>
    <string name="senhaHint">Digite a senha</string>
    <string name="login">Entrar</string>
    <string name="pCadastrar">Cadastrar usando e-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="title">Next</string>
    <string name="perfil">Perfil</string>
    <string name="amigo">Amigos</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>

    <string name="action_settings">Settings</string>
    <string name="name_person_card"/>
    <string name="info_above_name_card"/>
    <string name="location_person_card"/>
    <string name="comment_button_card">Comentar</string>
    <string name="button_share_card">Compartilhar</string>
</resources>
